--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,25 @@
 body {
   display: flex;
   justify-content: center;
+  background-color: beige;
 }
 
 form {
   display: flex;
   flex-direction: column;
   width: 20vw;
+  font-size: 1.5rem;
+}
+
+input,
+select {
+  margin-bottom: 20px;
+  margin-top: 5px;
 }
 
 .error {
   width: 100%;
   padding: 0;
-
   font-size: 80%;
   color: white;
   background-color: #900;
