--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ form {
 
 input,
 select {
-  margin-bottom: 20px;
   margin-top: 5px;
 }
 
@@ -30,4 +29,13 @@ select {
 
 .error.active {
   padding: 0.3em;
+}
+
+input:invalid {
+  border-color: #990000;
+  background-color: #ffdddd;
+}
+
+input:focus:invalid {
+  outline: none;
 }
